<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FancyClockApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_simple_clock_settings">Simple Clock Settings</string>
    <string name="title_simple_clock">Simple Clock</string>
    <string name="title_activity_fancy_clock">FancyClockActivity</string>

    <string name="hour_units">1\n\n2\n\n3\n\n4\n\n5\n\n6\n\n7\n\n8\n\n9\n\n10\n\n11\n\n12</string>
    <string name="minute_units">0\n\n5\n\n10\n\n15\n\n20\n\n25\n\n30\n\n35\n\n40\n\n45\n\n50\n\n55</string>
    <string name="second_units">0\n\n5\n\n10\n\n15\n\n20\n\n25\n\n30\n\n35\n\n40\n\n45\n\n50\n\n55</string>
    <string name="hr_label">HOUR</string>
    <string name="min_label">MINUTES</string>
    <string name="sec_label">SECONDS</string>
    <string name="hourCol">Hours Column</string>
    <string name="minCol">Minutes Column</string>
    <string name="secCol">Seconds Column</string>

    <string-array name="colors_array">
        <item>Black</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Red</item>
    </string-array>

    <string name="black">Black</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="red">Red</string>

    <string-array name="size_array">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra Large</item>
    </string-array>

    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="extra_large">Extra Large</string>

    <string name="fancy_clock">Fancy Clock</string>

</resources>
